@startuml gestor_streaming
title Netflix (Gestión de contenidos)

interface IReproducible {
  + reproducir(): void
  + mostrarInfo(): void
}

interface ITemporal {
  + calcularDuracionTotal(): int
}

abstract class Contenido {
  # id: string
  # titulo: string
  # genero: Genero
  ---
  + Contenido(_id: string, _titulo: string, _genero: Genero)
  + getId(): string
  + getTitulo(): string
  + getGenero(): Genero
  + {abstract} mostrarInfo(): void
}

class GestorContenidos {
  - contenidos: <Contenido>
  ---
  + GestorContenidos()
  + agregarContenido(c: Contenido): void
  + buscarPorId(id: string): void
  + buscarPorTitulo(t: string): void
  + eliminarContenido(id: string): void
  + listarContenidos(): void
  + listarContenidosPorGenero(g: Genero): void
  + cargarDesdeArchivo(ruta: string): void
  + operator+(c: Contenido): void
}

class Pelicula {
  - anio: int
  - duracion: int
  ---
  + Pelicula(_id: string, _titulo: string, _genero: Genero, _anio: int, _duracion: int)
  + calcularDuracionTotal(): int
  + mostrarInfo(): void
  + reproducir(): void
}

class Serie {
  - temporadas: <Temporada>
  - anio: int
  ---
  + Serie(_id: string, _titulo: string, _genero: Genero, _anio: int)
  + agregarTemporada(t: Temporada): void
  + operator+(t: Temporada): void
  + calcularDuracionTotal(): int
  + mostrarInfo(): void
  + reproducir(): void
}

class Juego {
  - offline: boolean
  - multijugador: boolean
  - dificultad: Dificultad
  ---
  + Juego(_id: string, _titulo: string, _genero: Genero, _offline: boolean, _multijugador: boolean, _dificultad: Dificultad)
  + mostrarInfo(): void
  + reproducir(): void
}

enum Dificultad {
  FACIL
  MEDIA
  DIFICIL
}

enum Genero {
  ACCION
  COMEDIA
  DRAMA
  FANTASIA
  CIENCIA_FICCION
}

class Temporada {
  - numTemporada: int
  - episodios: <Episodio>
  ---
  + Temporada(_numTemporada: int)
  + getNumTemporada(): int
  + getEpisodios(): <Episodio>
  + agregarEpisodio(e: Episodio): void
  + calcularDuracionTotal(): int
  + eliminarEpisodio(titulo: string): void
  + mostrarInfo(): void
  + operator+(e: Episodio): void
  + reproducir(): void
}

class Episodio {
  - titulo: string
  - duracion: int
  ---
  + getTitulo(): string
  + calcularDuracionTotal(): int
  + mostrarInfo(): void
  + reproducir(): void
}

' Jerarquía principal
Contenido <|-- Pelicula
Contenido <|-- Serie
Contenido <|-- Juego

' Interfaces
Contenido ..|> IReproducible
Episodio ..|> IReproducible
Temporada ..|> IReproducible

Pelicula ..|> ITemporal
Serie ..|> ITemporal
Temporada ..|> ITemporal
Episodio ..|> ITemporal

' Composiciones
GestorContenidos "1" *-- "*" Contenido
Serie "1" *-- "*" Temporada
Temporada "1" *-- "*" Episodio

' Dependencia
Contenido ..> Genero
GestorContenidos ..> Genero
Juego ..> Dificultad

@enduml